Changed index.html to extend from the base template

--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
 
-<html>
-    <head>
-        <title>Wikipendium</title>
-    </head>
-    <body>
-        <h1>Wikipendium!</h1>
-    </body>
-</html>
+{% block content %}
+<p>This is the content from the index template, yo!</p>
+{% endblock %}
