Adding foreign key to ArticleContent Model

--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Article</h1>
-        {% article %}
+        <p>
+        {{ slug }}
+        </p>
     </body>
 </html>
