Printing slug in the article template

--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -4,9 +4,9 @@
         <title>Article</title>
     </head>
     <body>
-        <h1>Article</h1>
+        <h1>{{ slug }}</h1>
         <p>
-        {{ slug }}
+        Content.
         </p>
     </body>
 </html>
