--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Article</title>
-    </head>
-    <body>
-        <h1>{{ slug }}</h1>
-        <p>
-        Content.
-        </p>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<h1>{{ slug }}</h1>
+<p>
+Content.
+</p>
+{% endblock %}
