--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>{{ slug }}</h1>
+<h1>{{ slug }}: {{ title }}</h1>
 <p>
-Content.
+{{ content }}
 </p>
 {% endblock %}
