--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -13,7 +13,7 @@
     <div id="footer-pusher">
         <div class=container>
             <header id="header" class=row>
-                <h1 class=span6>Wikipendium</h1>
+                <h1 class=span6><a href=/>Wikipendium</a></h1>
                 <nav class=span6>Insert nav here</nav>
             </header>
 
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="row">
                 <div class="span4">
-                    &copy; 2013 - Wikipendium! :D
+                    Wikipendium! :D
                 </div>
                 <div class="span4"></div>
                 <div class="span4"></div>
