--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -8,7 +8,7 @@
 
 <script src={{STATIC_URL}}js/autocompletrie.js></script>
 
-<input id=searchbox type=text placeholder="find an article..." />
+<input id=searchbox type=text placeholder="find a compendium..." />
 
 <script>
     (function(){
