--- a/wikipendium/wiki/templates/registration/activation_complete.html
+++ b/wikipendium/wiki/templates/registration/activation_complete.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block title %}Activation complete{% endblock %}
+
 {% block content %}
-this is activation_complete.html
+<h1>Congratulations!</h1>
+<p>Your registration is now complete. Go to the site and start having fun!</p>
 {% endblock %}
