--- a/wikipendium/wiki/templates/registration/registration_complete.html
+++ b/wikipendium/wiki/templates/registration/registration_complete.html
@@ -1,5 +1,8 @@
-{% extends "base.html" %}
+{% extends "registration/base.html" %}
+
+{% block title %}Registration complete{% endblock %}
 
 {% block content %}
-this is registration_complete.html
+<h1>Check your email</h1>
+<p>An activation link has been sent to the email address you supplied, along with instructions for activating your account.</p>
 {% endblock %}
