--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}{{ slug }}: {{ title }} -{% endblock %}
+
 {% block content %}
 <div id="article-header" class="row">
     <h1 class=span6>{{ slug }}: {{ title }}</h1>
