--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block body_class %}frontpage{% endblock %}
+
 {% block content %}
 
 <script src={{STATIC_URL}}js/autocompletrie.js></script>
