--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -2,13 +2,14 @@
 <html class="no-js">
 
 <head>
-    <title>Wikipendium</title>
+    <title>{% block title %}{% endblock %} Wikipendium</title>
     <script src=//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js></script>
     <link rel=stylesheet href={{STATIC_URL}}css/master.css />
     <script src={{STATIC_URL}}epiceditor/js/epiceditor.js></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <script>
+        var editor_has_been_updated = false;
         $(function(){
             $('textarea').each(function(){
                 var container = $('<div class=epiceditor-container></div>');
@@ -29,12 +30,24 @@
                     }
                 }).load();
                 editor.importFile('',$this.text());
+                editor.on('update', function () {
+                    editor_has_been_updated = true;
+                });
             });
+            $('form').submit(function(){
+                // Allow form to submit without being bugged about unsaved changes
+                editor_has_been_updated = false;
+            });
+        });
+        window.addEventListener('beforeunload', function(){
+            if (editor_has_been_updated) {
+                return "You have unsaved changes!";
+            }
         });
     </script>
 </head>
 
-<body class="responsive">
+<body class="responsive {% block body_class %}{% endblock %}">
     <div id="footer-pusher">
         <div class=container>
             <header id="header" class=row>
