--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div id="article-header" class="row">
-    <h1 class=span6>{{ slug }}: {{ title }}</h1>
+    <h1 class=span6>{{ articleContent.get_full_title }}</h1>
     <div class=span6>
-        <a href={{ slug }}/edit/>Edit</a>
+        <a href={{ articleContent.get_edit_url }}>Edit</a>
     </div>
 </div>
 <div id=article>
