Prettified search box

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2100,8 +2100,12 @@ text-align:right;
 ******************/
 
 .active{
+    /*
     background:#3B5998;
     background:#6D84B4;
+    */
+    background:rgba(109,132,184,0.8);
+    color:white;
 }
 
 #searchbox{
@@ -2131,7 +2135,7 @@ text-align:right;
     font-size:30px;
     margin:0 auto;
     display:block;
-    background:white;
+    background:rgba(255,255,255,0.9);
 }
 
 #suggestions li{
