--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -12,7 +12,7 @@
 {% autoescape off %}
 <div id="toc">
     <h3>Table of Contents</h3>
-    {{ content.toc_html }}
+    {{ toc }}
 </div>
 <div id=article>
     {{ content }}
