--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -52,7 +52,7 @@
     <div id="footer-pusher">
         <div class=container>
             <header id="header" class=row>
-                <h1 class=span6><a href=/>Wikipendium</a></h1>
+                <h1 class=span6><a href=/></a></h1>
                 <nav class=span6>
                 {% if user.is_authenticated %}
     
@@ -79,14 +79,8 @@
         <div id="push"></div>
     </div>
     <footer id="page-footer">
-        <div class="container">
-            <div class="row">
-                <div class="span4">
-                    Wikipendium! :D
-                </div>
-                <div class="span4"></div>
-                <div class="span4"></div>
-            </div>
+            <div class="container" style=font-variant:small-caps>
+                Wikipendium cc-by-sa
         </div>
     </footer>
 
