--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2082,9 +2082,16 @@ body.frontpage:before {
 }
 
 #header nav{
-text-align:right;
+    text-align:right;
 }
 
+/******************
+ * FOOTER
+******************/
+
+footer {
+    text-align:right;
+}
 
 
 /******************
@@ -2100,10 +2107,6 @@ text-align:right;
 ******************/
 
 .active{
-    /*
-    background:#3B5998;
-    background:#6D84B4;
-    */
     background:rgba(109,132,184,0.8);
     color:white;
 }
@@ -2112,7 +2115,7 @@ text-align:right;
     width:100%;
     border:0;
     outline: none;
-    margin:0 auto;
+    margin:30px auto 0;
     display:block;
     padding: 4px 5px 4px 5px;
     border: 1px solid #BDC7D8;
