--- a/wikipendium/wiki/templates/edit.html
+++ b/wikipendium/wiki/templates/edit.html
@@ -4,6 +4,6 @@
 <form method="post" action="">
     {% csrf_token %}
     {{ form }}
-    <input type=submit value=POST />
+    <input type=submit class="button button-large float-right" value=Save! />
 </form>
 {% endblock %}
