--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -80,7 +80,7 @@
     </div>
     <footer id="page-footer">
             <div class="container" style=font-variant:small-caps>
-                Wikipendium cc-by-sa
+                <a href=/>Wikipendium</a> cc-by-sa
         </div>
     </footer>
 
