--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -3,18 +3,18 @@
 {% block title %}{{ slug }}: {{ title }} -{% endblock %}
 
 {% block content %}
-<div id="article-header" class="row">
+<div id="article-header" class="row serif">
     <h1 class=span9>{{ articleContent.get_full_title }}</h1>
     <div class=span3>
         <a href={{ articleContent.get_edit_url }}>Edit</a>
     </div>
 </div>
 {% autoescape off %}
-<div id="toc">
+<div id="toc" class=serif>
     <h3>Table of Contents</h3>
     {{ toc }}
 </div>
-<div id=article>
+<div id=article class=serif>
     {{ content }}
 {% endautoescape %}
 </div>
