The serif W is back!

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -2102,7 +2102,8 @@ footer {
 }
 
 
-.serif{
+.serif,
+body.frontpage:before {
   font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
 }
 
