--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -64,7 +64,7 @@
     </ul>
 </div>
                 {% else %}
-                    <a class=button href=/accounts/login/><i class="icon icon-prepend"></i>Log in</a>
+                    <a class=button href=/accounts/login/><i class="icon icon-prepend"></i>Not logged in</a>
                 {% endif %}
                 </nav>
             </header>
