--- a/wikipendium/wiki/templates/registration/registration_form.html
+++ b/wikipendium/wiki/templates/registration/registration_form.html
@@ -4,55 +4,65 @@
 
 {% block content %}
 
-  {% if form.errors %}
-  <p class="errors">Please correct the errors below: {{ form.non_field_errors }}</p>
-  {% endif %}
-
   <h1>Create an account</h1>
   
-  <form method="post" action="" class="wide">
+  <form class=register-form method="post" action="" class="wide">
 	{% csrf_token %}
-    <p>
-      <label for="id_username">Username:</label>
-      {% if form.username.errors %}
-        <p class="errors">{{ form.username.errors.as_text }}</p>
-      {% endif %}
-      {{ form.username }}
-    </p>
-    <p>
-      <label for="id_email">Email address:</label>
-      {% if form.email.errors %}
-        <p class="errors">{{ form.email.errors.as_text }}</p>
-      {% endif %}
-      {{ form.email }}
-    </p>
-    <p>
-      <label for="id_password1">Password:</label>
-      {% if form.password1.errors %}
-        <p class="errors">{{ form.password1.errors.as_text }}</p>
-      {% endif %}
-      {{ form.password1 }}
-    </p>
-    <p>
-      <label for="id_password2">Password (type again to catch typos):</label>
-      {% if form.password2.errors %}
-        <p class="errors">{{ form.password2.errors.as_text }}</p>
-      {% endif %}
-      {{ form.password2 }}
-    </p>
-    <p class="submit"><input type="submit" value="Register &rarr;"></p>
+
+    <div class="field-group {%if form.username.errors %}error{% endif %}">
+        <label class=field-label>Username:</label>
+        <div class=fields>
+            {{ form.username }}
+
+            {% if form.username.errors %}
+            <div class=error-message>
+                {{form.username.errors|join:", "}}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+
+    <div class="field-group {%if form.email.errors %}error{%endif%}">
+        <label class=field-label>Email:</label>
+        <div class=fields>
+            {{ form.email }}
+
+            {% if form.email.errors %}
+            <div class=error-message>
+                {{form.email.errors|join:", "}}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+    
+    <div class="field-group {%if form.password1.errors %}error{%endif%}">
+        <label class=field-label>Password:</label>
+        <div class=fields>
+            {{ form.password1 }}
+
+            {% if form.password1.errors %}
+            <div class=error-message>
+                {{form.password1.errors|join:", "}}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+
+    <div class="field-group {%if form.password2.errors %}error{%endif%}">
+        <label class=field-label>Password again:</label>
+        <div class=fields>
+            {{ form.password2 }}
+
+            {% if form.password2.errors %}
+            <div class=error-message>
+                {{form.password2.errors|join:", "}}
+            </div>
+            {% endif %}
+        </div>
+    </div>
+
+<input class="button float-right" type="submit" value="Register &rarr;" />
   </form>
+
   
-{% endblock %}
-
-{% block content-related %}
-<p>Fill out the form to the left (all fields are required), and your
-account will be created; you'll be sent an email with instructions on how
-to finish your registration.</p>
-
-<p>We'll only use your email to send you signup instructions. We hate spam
-as much as you do.</p>
-
-<p>This account will let you log into the ticket tracker, claim tickets,
-and be exempt from spam filtering.</p>
 {% endblock %}
