--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -2,14 +2,15 @@
 
 {% block title %}{{ articleContent.get_full_title }} -{% endblock %}
 
-{% block content %}
-<!--
-<div class=button-group style=width:100%>
-    <a class="button edit-link" style=width:33% href={{ articleContent.get_edit_url }}>Edit</a>
-    <a class="button share-link" style=width:34% href=#>Share</a>
-    <a class="button history-link" style=width:33% href=#>History</a>
+{% block nav %}
+<div class=button-group style=inline-block>
+    <a class="button edit-link" href={{ articleContent.get_edit_url }}>Edit</a>
+    <a class="button share-link" href=#>Share</a>
+    <a class="button history-link" href=#>History</a>
 </div>
--->
+{% endblock %}
+
+{% block content %}
 <div id=article class=serif>
     <h1 class=title>{{ articleContent.get_full_title }}</h1>
 <div id="toc">
