--- a/wikipendium/wiki/templates/base.html
+++ b/wikipendium/wiki/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <title>{% block title %}{% endblock %} Wikipendium</title>
     <script src=//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js></script>
+    <script src={{STATIC_URL}}js/latexmathml.js></script>
     <link rel=stylesheet href={{STATIC_URL}}css/master.css />
     <script src={{STATIC_URL}}js/bootstrap.min.js></script>
     <script src={{STATIC_URL}}epiceditor/js/epiceditor.js></script>
