Add link back to home page

--- a/wikipendium/wiki/static/css/master.css
+++ b/wikipendium/wiki/static/css/master.css
@@ -183,12 +183,6 @@ img.native-width {
   .hide-on-tablet {
     display: none !important;
   }
-  .span6 {
-    width: 66.66667% !important;
-  }
-  .span3 {
-    width: 33.33333% !important;
-  }
 }
 @media screen and (min-width: 768px) {
   .show-on-tablet-desktop {
@@ -2092,9 +2086,16 @@ body.frontpage:before {
 #header {
 }
 
+#header h1 {
+    font-weight: normal;
+    font-size: 2.2em;
+}
+#header h1 a {
+    color: #aaa;
+}
+
 #header nav{
     text-align:right;
-    width:100%;
     margin-bottom:60px;
 }
 
