--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block body_class %}frontpage{% endblock %}
 
+{% block logo %}{% endblock %}
+
 {% block content %}
 
 <script src={{STATIC_URL}}js/autocompletrie.js></script>
