--- a/wikipendium/wiki/templates/edit.html
+++ b/wikipendium/wiki/templates/edit.html
@@ -7,4 +7,13 @@
     {{ form }}
     <input type=submit class="button button-large float-right" value=Save! />
 </form>
+<div class="help-container">
+<h3>Help:</h3>
+    <ul>
+        <li><a href=http://daringfireball.net/projects/markdown/basics>Guide to Markdown</a></li>
+        <li><a href=http://en.wikibooks.org/wiki/LaTeX/Mathematics>Guide to mathematical notation in LaTeX</a></li>
+    </ul>
+    <p>Mathematical notation may be written as follows:</p>
+    <pre>&#36;&#36; y = 2*x &#36;&#36;</pre>
+</div>
 {% endblock %}
