--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -8,8 +8,8 @@
     <div class="has-dropdown button-dropdown">
         <a class="button share-link" href=# data-toggle=dropdown>Share<span class=caret></span></a>
         <ul class="dropdown">
-            <li><a href="http://www.facebook.com/sharer.php?u={{ request.path }}&t={{ articleContent.get_full_title }}">Facebook</a></li>
-            <li><a href=#>Twitter</a></li>
+            <li><a href="http://www.facebook.com/sharer.php?u={{ share_url }}&t={{ articleContent.get_full_title }}" target=_blank>Facebook</a></li>
+            <li><a href="http://www.twitter.com/share?url={{ share_url }}" target=_blank>Twitter</a></li>
         </ul>
     </div>
     <a class="button history-link" href=#>History</a>
