--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -4,6 +4,40 @@
 
 {% block logo %}{% endblock %}
 
+{% block nav %}
+<button class=button data-toggle=modal data-target=#createModal>Create article</button>
+<div id="createModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-inner">
+
+        <form class="create-article-slug-form">
+
+            <div class="modal-section">
+                <button type="button" class="close right" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3>Create New Article</h3>
+            </div>
+
+            <div class="modal-section">
+                <div class="field-group block">
+                    <label class="field-label">Course code</label>
+                    <div class="fields">
+                        <input type="text" name="slug" id="create-article-slug" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-section modal-footer">
+                <div class="field-group block">
+                    <button class="button" data-dismiss="modal">Cancel</button>
+                    <button class="button button-large" id="create-button">Create</button>
+                </div>                      
+            </div>                  
+
+        </form>
+
+    </div><!--end modal-inner-->            
+</div><!--end modal-->
+{% endblock %}
+
 {% block content %}
 
 <script src={{STATIC_URL}}js/autocompletrie.js></script>
