--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -9,10 +9,8 @@
 <div id="createModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-inner">
 
-        <form class="create-article-slug-form">
 
             <div class="modal-section">
-                <button type="button" class="close right" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3>Create New Article</h3>
             </div>
 
@@ -28,11 +26,9 @@
             <div class="modal-section modal-footer">
                 <div class="field-group block">
                     <button class="button" data-dismiss="modal">Cancel</button>
-                    <button class="button button-large" id="create-button">Create</button>
+                    <button class="button button-large" data-dismiss="modal" data-toggle="modal" id="create-button">Create</button>
                 </div>                      
             </div>                  
-
-        </form>
 
     </div><!--end modal-inner-->            
 </div><!--end modal-->
