First draft of history view

--- a/wikipendium/wiki/templates/article.html
+++ b/wikipendium/wiki/templates/article.html
@@ -12,7 +12,7 @@
             <li><a href="http://www.twitter.com/share?url={{ share_url }}" target=_blank>Twitter</a></li>
         </ul>
     </div>
-    <a class="button history-link" href=#>History</a>
+    <a class="button history-link" href={{ articleContent.get_history_url }}>History</a>
 </div>
 {% endblock %}
 
