--- a/wikipendium/wiki/templates/edit.html
+++ b/wikipendium/wiki/templates/edit.html
@@ -14,6 +14,7 @@
     <ul>
         <li><a href=http://daringfireball.net/projects/markdown/basics>Guide to Markdown</a></li>
         <li><a href=http://en.wikibooks.org/wiki/LaTeX/Mathematics>Guide to mathematical notation in LaTeX</a></li>
+        <li><a href=http://code.google.com/p/support/wiki/WikiSyntax#Tables>Guide to using tables</a></li>
     </ul>
     <p>Mathematical notation may be written as follows:</p>
     <pre>&#36;&#36; y = 2*x &#36;&#36;</pre>
