--- a/wikipendium/wiki/templates/index.html
+++ b/wikipendium/wiki/templates/index.html
@@ -5,33 +5,7 @@
 {% block logo %}{% endblock %}
 
 {% block nav %}
-<button class=button data-toggle=modal data-target=#createModal>Create article</button>
-<div id="createModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-inner">
-
-
-            <div class="modal-section">
-                <h3>Create New Article</h3>
-            </div>
-
-            <div class="modal-section">
-                <div class="field-group block">
-                    <label class="field-label">Course code</label>
-                    <div class="fields">
-                        <input type="text" name="slug" id="create-article-slug" />
-                    </div>
-                </div>
-            </div>
-
-            <div class="modal-section modal-footer">
-                <div class="field-group block">
-                    <button class="button" data-dismiss="modal">Cancel</button>
-                    <button class="button button-large" data-dismiss="modal" data-toggle="modal" id="create-button">Create</button>
-                </div>                      
-            </div>                  
-
-    </div><!--end modal-inner-->            
-</div><!--end modal-->
+<a class=button href=/new/>Create article</a>
 {% endblock %}
 
 {% block content %}
